Fixed mobile overflows

--- a/css/styles.css
+++ b/css/styles.css
@@ -273,7 +273,7 @@ a {
     border-radius: 15px;
     box-shadow: 0 0 10px 5px #050a1a;
     overflow: hidden;
-    min-width: 432px;
+    min-width: fit-content;
 }
 
 .card__header, .card__body{
@@ -357,8 +357,8 @@ a {
 
 .circle {
     margin:auto;
-    width: 512px;
-    height: 512px;
+    max-width: 100vw;
+    aspect-ratio: 1 / 1;
     position: relative;
     border-radius: 100%;
     overflow: hidden;
@@ -419,4 +419,4 @@ a {
     .skills--heading {
         text-align: left;
     }
-}
+} 
